--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<?php
-
-?>
 <html>
 
 <head>
@@ -15,18 +12,15 @@
             text-align: center;
             margin: 20px 0px 20px 0px;
         }
-
         p {
             font-size: 12px;
             text-decoration: none;
             color: #ffffff;
         }
-
         h1 {
             font-size: 1.5em;
             color: #525252;
         }
-
         .email {
             background: #ecf0f1;
             border: #ccc 1px solid;
@@ -38,7 +32,6 @@
             font-size: 1em;
             border-radius: 4px;
         }
-
         .password {
             border-radius: 4px;
             background: #ecf0f1;
@@ -47,7 +40,6 @@
             width: 250px;
             font-size: 1em;
         }
-
         .btn {
             background: #2ecc71;
             width: 125px;
@@ -56,7 +48,6 @@
             color: white;
             border-radius: 4px;
             border: #27ae60 1px solid;
-
             margin-top: 20px;
             margin-bottom: 20px;
             float: left;
@@ -64,11 +55,9 @@
             font-weight: 800;
             font-size: 0.8em;
         }
-
         .btn:hover {
             background: #2CC06B;
         }
-
         #btn2 {
             float: left;
             background: #3498db;
@@ -78,14 +67,12 @@
             color: white;
             border-radius: 4px;
             border: #2980b9 1px solid;
-
             margin-top: 20px;
             margin-bottom: 20px;
             margin-left: 10px;
             font-weight: 800;
             font-size: 0.8em;
         }
-
         #btn2:hover {
             background: rgb(125, 233, 157);
         }
@@ -122,8 +109,13 @@
     </form>
     <script language="javascript">
         function check(form) {
-
-            if (form.email.value == "a" && form.password.value == "a") {
+            if (
+                (form.email.value == "a" && form.password.value == "a") ||
+                (form.email.value == "1800543" && form.password.value == "1800543") ||
+                (form.email.value == "1801585" && form.password.value == "1801585") ||
+                (form.email.value == "1801145" && form.password.value == "1801145") ||
+                (form.email.value == "1800662" && form.password.value == "1800662")
+                )  {
                 localStorage.setItem("current_user", form.email.value);
                 window.open("https://tayzhiyung.github.io/MNO1109/MNO1109_main_page")
                 
