--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 (form.email.value == "1800662" && form.password.value == "1800662")
                 )  {
                 localStorage.setItem("current_user", form.email.value);
-                window.open("https://tayzhiyung.github.io/MNO1109/MNO1109_main_page")
+                window.open("MNO1109_main_page")
                 
             }
             else {
