--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 </head>
 
 <body>
-    <form name="loginForm" method="post" action="">
+    <form name="loginForm">
                
         <table width="20%" bgcolor="0099CC" align="center">
             <h1>Sign Up/Log In to MNO1109 Online Lecture and Tutorial</h1>
