--- a/MNO1109_Cp5.html
+++ b/MNO1109_Cp5.html
@@ -368,7 +368,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>General</b>
 
                                         <figure>
-                                            <img src="img/CP5_SC2_FIG1.png" width="404" class="center">
+                                            <img src="img/CP5_SC2_FIG1.png" width="75%" class="center">
                                         </figure>
 
                                         When a ship such as tanker and LNG is <span style="color:blue">carrying
