--- a/MNO1109_Cp5.html
+++ b/MNO1109_Cp5.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
+    <script type="text/javascript" src="js/latexit.js"></script>
     <style>
         img {
             display: block;
