--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -8,6 +8,7 @@
             grid-template-columns: auto auto auto;
             background-color: #2196F3;
             padding: 10px;
+            margin: 1% 1% 1% 1%;
 
         }
 
