--- a/MNO1109_Cp1a.html
+++ b/MNO1109_Cp1a.html
@@ -287,7 +287,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>General Notes for Linesplan</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG1.png" width="604" class="center">
+                                            <img src="img/CP1a_SC1_FIG1.png" width="75%" class="center">
                                         </figure>
 
 
@@ -376,7 +376,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Description of
                                             Linesplan</b><br>
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG2.png" width="604">
+                                            <img src="img/CP1a_SC1_FIG2.png" width="75%">
                                         </figure>
 
                                         The <span style="color:red">projection of ships</span> can be made to <span
@@ -453,7 +453,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Description of Linesplan</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG3.png" width="604">
+                                            <img src="img/CP1a_SC1_FIG3.png" width="75%">
                                         </figure>
 
                                         <span style="color:red">Sheer plane</span> is also called <span
@@ -533,7 +533,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Half-Breadth Plan</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG4.png" width="604">
+                                            <img src="img/CP1a_SC1_FIG4.png" width="75%">
                                         </figure>
 
 
@@ -607,7 +607,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Body Plan</b><br>
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG5.png" width="604">
+                                            <img src="img/CP1a_SC1_FIG5.png" width="75%">
                                         </figure>
 
                                         The <span style="color:blue">body plan</span> represents the <span
@@ -690,7 +690,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Various Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC2_FIG1.png" width="604">
+                                            <img src="img/CP1a_SC2_FIG1.png" width="75%">
                                         </figure>
 
                                         <span style="color:red">Coefficients of hull form</span>
@@ -749,7 +749,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Midship Area Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC2_FIG2.png" width="604">
+                                            <img src="img/CP1a_SC2_FIG2.png" width="75%">
                                         </figure>
 
 
@@ -810,7 +810,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Water-Plane Area Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC2_FIG3.png" width="604">
+                                            <img src="img/CP1a_SC2_FIG3.png" width="75%">
                                         </figure>
 
                                         The <span style="color:blue">Water-plane Area Coefficient</span> is defined as,
@@ -889,7 +889,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Block Coefficient</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC2_FIG4.png" width="604">
+                                            <img src="img/CP1a_SC2_FIG4.png" width="75%">
                                         </figure>
 
                                         The <span style="color:blue">Block Coefficient</span> is defined as,
@@ -1035,7 +1035,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
 
                                         <figure>
-                                            <img src="img/CP1a_SC2_FIG6.png" width="904">
+                                            <img src="img/CP1a_SC2_FIG6.png" width="75%">
                                         </figure>
 
 
@@ -1119,7 +1119,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                     <p> <b>Equilibrium</b> <br>
 
                                         <figure>
-                                            <img src="img/CP1a_SC3_FIG1.png" width="504">
+                                            <img src="img/CP1a_SC3_FIG1.png" width="75%">
                                         </figure>
 
                                         <span style="color:red">Principle of Archimedes</span> states that the <span
