--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -5,7 +5,7 @@
     <style>
         .grid-container {
             display: grid;
-            grid-template-columns: auto auto auto;
+            grid-template-columns: auto auto;
             background-color: #2196F3;
             padding: 10px;
             margin: 1% 1% 1% 1%;
