--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -18,6 +18,7 @@
             padding: 20px;
             font-size: 30px;
             text-align: center;
+            margin: 1% 1% 1% 1%;
         }
 
         .button {
