--- a/MNO1109_main_page.html
+++ b/MNO1109_main_page.html
@@ -15,7 +15,7 @@
         .grid-item {
             background-color: rgba(255, 255, 255, 0.8);
             border: 1px solid rgba(0, 0, 0, 0.8);
-            padding: 20px;
+            padding: 1%;
             font-size: 30px;
             text-align: center;
             margin: 1% 1% 1% 1%;
