--- a/MNO1109_Cp1a.html
+++ b/MNO1109_Cp1a.html
@@ -452,7 +452,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Description of Linesplan</b> <br>
                                         <figure>
-                                            <img src="img/CP1a_SC1_FIG3.png" width="75%">
+                                            <img src="img/CP1a_SC1_FIG3.PNG" width="75%">
                                         </figure>
 
 
