--- a/MNO1109_Cp4.html
+++ b/MNO1109_Cp4.html
@@ -463,7 +463,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         but in <br>
 
                                         <div lang="latex">
-                                            Triangle_{GZM} = GZ - GM sin(\theta)
+                                            Triangle_{GZM}: GZ = GM sin(\theta)
 
                                         </div> <br>
 
