--- a/MNO1109_Cp4.html
+++ b/MNO1109_Cp4.html
@@ -634,7 +634,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             style="color:green;"><i>BB</i><sub>1</sub> is parallel to <i>gg</i><sub>1</sub></span>,<br><br>
 
                                         <div lang="latex">
-                                            BB_{1}=\frac{V \times gg_1}{V}
+                                            BB_{1}=\frac{v \times gg_1}{V}
 
                                         </div> <br>
 
