--- a/MNO1109_Cp4.html
+++ b/MNO1109_Cp4.html
@@ -904,7 +904,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                         If <span style="color:blue;">GM = 0</span>, the ship is in <span
                                             style="color:green;">neutral equilibrium</span>. In neutral equilibrium,
-                                        <span style="color:red;">GM=KM</span>.<br><br>
+                                        <span style="color:red;">KG=KM</span>.<br><br>
 
                                         If
                                         the ship is inclied to a <span style="color:blue;">small angle</span>, the ship
@@ -1198,9 +1198,8 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         these
                                         methods lead to <span style="color:blue;">increase the GM value</span>, by
                                         either <span style="color:red;">lowering</span> the <span
-                                            style="color:green;">CoG </span>or/and increasing the <span style="color:blue;">CoB</span>
-                                        and
-                                        <span style="color:blue;">increasing the Metacentric height</span>
+                                            style="color:green;">CoG </span> and <span style="color:blue;">increasing the Metacentric 
+                                        height</span>
                                         M.<br><br><br><br>
 
                                     </p>
