--- a/MNO1109_Cp1b.html
+++ b/MNO1109_Cp1b.html
@@ -703,7 +703,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         the
                                         ship for any particular draft. <br><br>
 
-                                        The displacement curve consists of a <span style="color:blue">draft scale
+                                        The TPC curve consists of a <span style="color:blue">draft scale
                                             plotted on the vertical axis</span> and the <span
                                             style="color:red">displacement scale plotted on the
                                             horizontal axis.</span>
