--- a/MNO1109_Cp1b.html
+++ b/MNO1109_Cp1b.html
@@ -781,7 +781,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         buoyancy</span> for its intended service. <br><br>
 
                                     <figure>
-                                        <img src="img/CP1b_SC3_FIG1.png" width="504">
+                                        <img src="img/CP1b_SC3_FIG1.png" width="75%">
                                     </figure>
 
                                     It was introduced by <span style="color:blue">Samuel Plimsol</span> to <span
@@ -840,7 +840,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                         to float at <span style="color:green">different water conditions.</span>
 
                                         <figure>
-                                            <img src="img/CP1b_SC3_FIG2.jpg" width="504">
+                                            <img src="img/CP1b_SC3_FIG2.png" width="75%">
                                         </figure>
                                     </p>
 
