--- a/MNO1109_Cp3.html
+++ b/MNO1109_Cp3.html
@@ -347,7 +347,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
 
                                     <p> <b>Moment</b><br>
                                         When the <span style="color:red;">weight already on board </span>the ship is
-                                        <span style="color:blue;">shiftted transversely</span> (from left to
+                                        <span style="color:blue;">shifted transversely</span> (from left to
                                         right), the <span style="color:blue;">centre of gravity <i>G</i></span> will move to
                                         <span style="color:green;"><i>G'</i></span> in the <span
                                             style="color:blue;">same
@@ -874,7 +874,7 @@ SECT1   SECT2  SECT3   SECT1   SECT2  SECT3         SECT1      SECT2      SECT3
                                             stern</span>, if the <span style="color:blue;">forward draft</span> is <span
                                             style="color:green;">greater</span>
                                         , she is <span style="color:red;">trimmed by the
-                                            bo</span>w.<br><br>
+                                            bow</span>.<br><br>
 
                                         <strong>(Draft is the depth of the hull below the water)</strong>
                                         <br><br><br><br>
