--- a/registration_page.html
+++ b/registration_page.html
@@ -97,7 +97,7 @@
 
             <tr>
                 <td>Username:</td>
-                <td><input type="text" size=25 name="matriculation number" value="username" onFocus="this.value=''"
+                <td><input type="text" size=25 name="username" value="Matriculation No." onFocus="this.value=''"
                         onblur="field_blur(this, 'email');" class="email" /></td>
 
 
@@ -109,6 +109,7 @@
                         onblur="field_blur(this, 'password');" class="email" /></td>
             </tr>
 
+            
             <tr>
                 <td><input type="Reset"></td>
                 <td><input type="submit" onclick="return check(this.form)" value="Login"></td>
