--- a/registration_page.html
+++ b/registration_page.html
@@ -97,7 +97,7 @@
 
             <tr>
                 <td>Username:</td>
-                <td><input type="text" size=25 name="username" value="Matriculation No." onFocus="this.value=''"
+                <td><input type="text" size=25 name="email" value="Matriculation No." onFocus="this.value=''"
                         onblur="field_blur(this, 'email');" class="email" /></td>
 
 
