--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
             ) {
                 localStorage.setItem("current_user", form.email.value);
-                return true;
+                window.open("MNO1109_main_page")
             }
             else {
                 alert("Error Password or Username")
