--- a/index.html
+++ b/index.html
@@ -193,8 +193,9 @@
                 (form.email.value == "1901662" && form.password.value == "1901662") ||
                 (form.email.value == "1901674" && form.password.value == "1901674") ||
                 (form.email.value == "1901638" && form.password.value == "1901638") ||
+                (form.email.value == "1902963" && form.password.value == "1902963") ||
                 (form.email.value == "1901648" && form.password.value == "1901648")
-
+                
             ) {
                 localStorage.setItem("current_user", form.email.value);
                 window.open("MNO1109_main_page")
