--- a/registration_page.html
+++ b/registration_page.html
@@ -121,6 +121,7 @@
         function check(form) {
 
             if (
+                (form.email.value == "tayzy" && form.password.value == "tayzy") ||
                 (form.email.value == "a" && form.password.value == "a") ||
                 (form.email.value == "2000956" && form.password.value == "2000956") ||
                 (form.email.value == "2001178" && form.password.value == "2001178") ||
