--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         function check(form) {
 
             if (
+                (form.email.value == "visitor" && form.password.value == "visitor") ||
                 (form.email.value == "a" && form.password.value == "a") ||
                 (form.email.value == "2000956" && form.password.value == "2000956") ||
                 (form.email.value == "2001178" && form.password.value == "2001178") ||
