--- a/registration_page.html
+++ b/registration_page.html
@@ -122,7 +122,7 @@
 
             if (
                 (form.email.value == "a" && form.password.value == "a") ||
-                (form.email.value == "tayzy" && form.password.value == "tayzy") ||
+                (form.email.value == "visitor" && form.password.value == "visitor") ||
                 (form.email.value == "2000956" && form.password.value == "2000956") ||
                 (form.email.value == "2001178" && form.password.value == "2001178") ||
                 (form.email.value == "2000619" && form.password.value == "2000619") ||
